--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,11 +31,22 @@ display-popup -d "#{pane_current_path}" -E "tmux new-session -A -s scratch"
 }
 
 
-# switch panes using Alt-arrow without prefix 
+# switch panes using Shift-arrow without prefix 
 bind -n S-Left select-pane -L
 bind -n S-Right select-pane -R
 bind -n S-Up select-pane -U
 bind -n S-Down select-pane -D
+
+# switch windows alt+number
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
 # Alternative bindings for scrolling in copy mode (replace the ones we unbind)
 bind -T copy-mode M-Up send-keys -X scroll-up
@@ -67,8 +78,6 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'catppuccin/tmux'    
 set -g @plugin 'omerxx/tmux-sessionx' # default keybind "<prefix> o" to activate
-set -g @plugin 'tmux-plugins/tmux-online-status'
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin "tmux-plugins/tmux-resurrect" #persist tmux sessions after computer restart
 set -g @plugin "tmux-plugins/tmux-continuum" #automatically save sessions every 15mins
 
@@ -92,17 +101,17 @@ set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 
 # status right look and feel
-set -g status-right-length 100
-set -g status-right ""
+# set -g status-right-length 100
+# set -g status-right ""
 # set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
 # set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
 # set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
 # set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
 
 
 # Configure Tmux
-set -g status-position bottom
+set -g status-position "bottom"
 set -g status-style "bg=#{@thm_bg}"
 set -g status-justify "absolute-centre"
 
@@ -142,10 +151,11 @@ set -g status-position top
 # set -g status-left-length 20
 
 # Right side of status bar with custom date format and time
-# set -g status-right '#[fg=#CED6E2,bg=#32364E] %d-%b-%y #[fg=#CED6E2,bg=#32364E] %H:%M:%S '
-# set -g status-right ''
-# set -g status-right-length 50
+set -g status-right '#[fg=#CED6E2,bg=#32364E] %d-%b-%y #[fg=#CED6E2,bg=#32364E] %H:%M:%S '
+set -g status-right ''
+set -g status-right-length 50
 set -g @resurrect-capture-pane-contents "on"
 set -g @continuum-restore "on"
 
 run '~/.tmux/plugins/tpm/tpm'
+
