--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,26 +101,26 @@ set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 
 # status right look and feel
-# set -g status-right-length 100
-# set -g status-right ""
-# set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
-# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
-# set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
-# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
-# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
 
 
 # Configure Tmux
-set -g status-position "bottom"
-set -g status-style "bg=#{@thm_bg}"
-set -g status-justify "absolute-centre"
+# set -g status-position "bottom"
+# set -g status-style "bg=#{@thm_bg}"
+# set -g status-justify "absolute-centre"
 
 # pane border look and feel
-# setw -g pane-border-status top
-# setw -g pane-border-format ""
-# setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
-# setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
-# setw -g pane-border-lines single
+setw -g pane-border-status top
+setw -g pane-border-format ""
+setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+setw -g pane-border-lines single
 
 # window look and feel
 set -wg automatic-rename on
@@ -137,18 +137,7 @@ set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
 ## NOTE: Basic STATUS BAR ##
-# set -g status-justify left
-# set -g status-interval 2
 set -g status-position top
-# set -g status-bg '#32364E'
-# set -g status-fg '#CED6E2'
-
-# set -g window-status-style "bg=#32364E,fg=#EEC4C1"
-# set -g window-status-current-style "bg=#18181B,fg=#CED6E2"
-
-## Show PREFIX on left side when c-b
-# set -g status-left '#[fg=colour232,bg=#F7CA7A,bold]#{?client_prefix, <pre> ,}#[fg=#CED6E2,bg=#32364E,bold][#S] '
-# set -g status-left-length 20
 
 # Right side of status bar with custom date format and time
 set -g status-right '#[fg=#CED6E2,bg=#32364E] %d-%b-%y #[fg=#CED6E2,bg=#32364E] %H:%M:%S '
