--- a/glazwm.yaml
+++ b/glazwm.yaml
@@ -28,7 +28,7 @@ general:
     # Trigger for cursor jump:
     # - 'monitor_focus': Jump when focus changes between monitors.
     # - 'window_focus': Jump when focus changes between windows.
-    trigger: "monitor_focus"
+    trigger: "window_focus"
 
   # How windows should be hidden when switching workspaces.
   # - 'cloak': Recommended. Hides windows with no animation.
@@ -47,14 +47,14 @@ gaps:
   scale_with_dpi: true
 
   # Gap between adjacent windows.
-  inner_gap: "5px"
+  inner_gap: "10px"
 
   # Gap between windows and the screen edge.
   outer_gap:
     top: "10px"
-    right: "20px"
-    bottom: "20px"
-    left: "20px"
+    right: "10px"
+    bottom: "10px"
+    left: "10px"
 
 window_effects:
   # Visual effects to apply to the focused window.
@@ -63,7 +63,7 @@ window_effects:
     # ** Exclusive to Windows 11 due to API limitations.
     border:
       enabled: true
-      color: "#FBC3A7"
+      color: "#ffffff"
 
     # Remove the title bar from the window's frame. Note that this can
     # cause rendering issues for some applications.
@@ -124,9 +124,17 @@ window_behavior:
 
 workspaces:
   - name: "1"
+    bind_to_monitor: 1
+    keep_alive: true
   - name: "2"
+    bind_to_monitor: 1
+    keep_alive: true
   - name: "3"
+    bind_to_monitor: 0
+    keep_alive: true
   - name: "4"
+    bind_to_monitor: 0
+    keep_alive: true
   - name: "5"
   - name: "6"
   - name: "7"
@@ -217,10 +225,6 @@ keybindings:
   - commands: ["toggle-tiling-direction"]
     bindings: ["alt+v"]
 
-  # Change focus from tiling windows -> floating -> fullscreen.
-  - commands: ["wm-cycle-focus"]
-    bindings: ["alt+space"]
-
   # Change the focused window to be floating.
   - commands: ["toggle-floating --centered"]
     bindings: ["alt+shift+space"]
@@ -257,7 +261,7 @@ keybindings:
   # `shell-exec %ProgramFiles%/Git/git-bash.exe` to start Windows
   # Terminal and Git Bash respectively.
   - commands:
-      ["shell-exec C:\\Users\\TIave\\AppData\\Local\\Programs\\Warp\\warp.exe"]
+      ["shell-exec C:\\Users\\Pablo\\AppData\\Local\\Programs\\Warp\\warp.exe"]
     bindings: ["alt+enter"]
 
   # Focus the next/previous active workspace defined in `workspaces` config.
